--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div>
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="#" class="navbar-brand">bezKoder</a>
+    <a href="javascript:;" class="navbar-brand">Freestrokes</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a routerLink="tutorials" class="nav-link">Tutorials</a>
+        <a routerLink="tutorial" class="nav-link">Tutorial List</a>
       </li>
       <li class="nav-item">
         <a routerLink="add" class="nav-link">Add</a>
