--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,16 +1,20 @@
 <div>
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="javascript:;" class="navbar-brand">Freestrokes</a>
+    <a routerLink="/" class="navbar-brand">Angular-Study</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a routerLink="tutorial" class="nav-link">Tutorial List</a>
+        <a routerLink="tutorial/list" class="nav-link">Tutorial List</a>
       </li>
       <li class="nav-item">
-        <a routerLink="add" class="nav-link">Add</a>
+        <a routerLink="tutorial/add" class="nav-link">Tutorial Add</a>
       </li>
+      <!--TODO-->
+      <!--<li class="nav-item">-->
+        <!--<a routerLink="add" class="nav-link">Add</a>-->
+      <!--</li>-->
+      <!--//TODO-->
     </div>
   </nav>
-
   <div class="container mt-3">
     <router-outlet></router-outlet>
   </div>
