--- a/angular-frontend/src/app/tutorial/tutorial-detail/tutorial-detail.component.html
+++ b/angular-frontend/src/app/tutorial/tutorial-detail/tutorial-detail.component.html
@@ -1,65 +1,45 @@
 <div>
   <div *ngIf="currentTutorial.id" class="edit-form">
-    <h4>Tutorial</h4>
+    <h4>Tutorial Detail</h4>
     <form>
       <div class="form-group">
         <label for="title">Title</label>
-        <input
-          type="text"
-          class="form-control"
-          id="title"
-          [(ngModel)]="currentTutorial.title"
-          name="title"
-        />
+        <input type="text" name="title" class="form-control" id="title" [(ngModel)]="currentTutorial.title"/>
       </div>
       <div class="form-group">
         <label for="description">Description</label>
-        <input
-          type="text"
-          class="form-control"
-          id="description"
-          [(ngModel)]="currentTutorial.description"
-          name="description"
-        />
+        <input type="text" name="description" class="form-control" id="description" [(ngModel)]="currentTutorial.description"/>
       </div>
-
       <div class="form-group">
         <label><strong>Status:</strong></label>
-        {{ currentTutorial.published ? "Published" : "Pending" }}
+        {{currentTutorial.published ? 'Published' : 'Pending'}}
       </div>
     </form>
+    <!--TODO-->
+    <!--<button class="btn btn-success" (click)="saveTutorial()">Submit</button>-->
+    <!--//TODO-->
+    <!--TODO-->
+    <!--<div *ngIf="submitted">-->
+      <!--<h4>Tutorial was submitted successfully!</h4>-->
+      <!--<button class="btn btn-success" (click)="newTutorial()">Add</button>-->
+    <!--</div>-->
+    <!--TODO-->
 
-    <button
-      class="badge badge-primary mr-2"
-      *ngIf="currentTutorial.published"
-      (click)="updatePublished(false)"
-    >
-      UnPublish
-    </button>
-    <button
-      *ngIf="!currentTutorial.published"
-      class="badge badge-primary mr-2"
-      (click)="updatePublished(true)"
-    >
-      Publish
-    </button>
+    <!--<button class="badge badge-primary mr-2" *ngIf="currentTutorial.published" (click)="updatePublished(false)">UnPublish</button>-->
+    <!--<button class="badge badge-primary mr-2" *ngIf="!currentTutorial.published" (click)="updatePublished(true)">Publish</button>-->
+    <!--<button class="badge badge-success mb-2" (click)="updateTutorial()">Update</button>-->
+    <!--<button class="badge badge-danger mr-2" (click)="deleteTutorial()">Delete</button>-->
 
-    <button class="badge badge-danger mr-2" (click)="deleteTutorial()">
-      Delete
-    </button>
-
-    <button
-      type="submit"
-      class="badge badge-success mb-2"
-      (click)="updateTutorial()"
-    >
-      Update
-    </button>
-    <p>{{ message }}</p>
+    <button class="btn btn-primary mr-2" *ngIf="currentTutorial.published" (click)="updatePublished(false)">UnPublish</button>
+    <button class="btn btn-primary mr-2" *ngIf="!currentTutorial.published" (click)="updatePublished(true)">Publish</button>
+    <button class="btn btn-success mr-2" (click)="updateTutorial()">Update</button>
+    <button class="btn btn-danger mr-2" (click)="deleteTutorial()">Delete</button>
+    <p>{{message}}</p>
   </div>
-
-  <div *ngIf="!currentTutorial.id">
-    <br />
-    <p>Cannot access this Tutorial...</p>
-  </div>
+  <!--TODO-->
+  <!--<div *ngIf="!currentTutorial.id">-->
+    <!--<br/>-->
+    <!--<p>Cannot access this Tutorial...</p>-->
+  <!--</div>-->
+  <!--//TODO-->
 </div>
