#master Modified frontend and server.

--- a/angular-frontend/src/app/tutorial/tutorial-add/tutorial-add.component.html
+++ b/angular-frontend/src/app/tutorial/tutorial-add/tutorial-add.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="submit-form">
-    <div *ngIf="!submitted">
+    <div>
       <h4>Tutorial Add</h4>
       <div class="form-group">
         <label for="title">Title</label>
@@ -10,11 +10,13 @@
         <label for="description">Description</label>
         <input name="description" class="form-control" id="description" required [(ngModel)]="tutorial.description"/>
       </div>
-      <button class="btn btn-success" (click)="saveTutorial()">Submit</button>
+      <button class="btn btn-success" (click)="createTutorial()">Submit</button>
     </div>
-    <div *ngIf="submitted">
-      <h4>Tutorial was submitted successfully!</h4>
-      <button class="btn btn-success" (click)="newTutorial()">Add</button>
-    </div>
+    <!--TODO-->
+    <!--<div *ngIf="submitted">-->
+      <!--<h4>Tutorial was submitted successfully!</h4>-->
+      <!--<button class="btn btn-success" (click)="newTutorial()">Add</button>-->
+    <!--</div>-->
+    <!--//TODO-->
   </div>
 </div>
