--- a/angular-frontend/src/app/tutorial/tutorial-list/tutorial-list.component.html
+++ b/angular-frontend/src/app/tutorial/tutorial-list/tutorial-list.component.html
@@ -11,7 +11,7 @@
     <h4>Tutorial List</h4>
     <ul class="list-group">
       <li class="list-group-item"
-          *ngFor="let tutorial of tutorialList | paginate: { itemsPerPage: pageSize, currentPage: currnetPage, totalItems: tutorialList.length }; let i = index;"
+          *ngFor="let tutorial of tutorialList | paginate: page; let i = index;"
           routerLink="/tutorial/{{tutorial.id}}">
         {{tutorial.title}}
       </li>
@@ -19,15 +19,23 @@
   </div>
 
   <!-- Pagination:S -->
-  <div class="col-md-12">
+  <div class="col-md-8">
     <pagination-controls
       [directionLinks]="true"
-      [previousLabel]="Prev"
-      [nextLabel]="Next"
       [responsive]="true"
+      [previousLabel]="'Prev'"
+      [nextLabel]="'Next'"
       [maxSize]="10"
-      (pageChange)="pageChanged($event)">
+      (pageChange)="changePage($event)">
     </pagination-controls>
+  </div>
+  <div class="mt-3">
+    Items per Page:
+    <select (change)="changePageSize($event)">
+      <option *ngFor="let pageSize of pageSizeList">
+        {{pageSize.value}}
+      </option>
+    </select>
   </div>
   <!-- Pagination:E -->
 
