#master Changed retrieve list function for pagination.

--- a/angular-frontend/src/app/tutorial/tutorial-list/tutorial-list.component.html
+++ b/angular-frontend/src/app/tutorial/tutorial-list/tutorial-list.component.html
@@ -3,7 +3,7 @@
     <div class="input-group mb-3">
       <input type="text" class="form-control" placeholder="Please enter search keyword" [(ngModel)]="keyword"/>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button" (click)="searchTutorial()">Search</button>
+        <button class="btn btn-outline-secondary" type="button" (click)="retrieveTutorialList()">Search</button>
       </div>
     </div>
   </div>
