--- a/angular-frontend/src/app/tutorial/tutorial-list/tutorial-list.component.html
+++ b/angular-frontend/src/app/tutorial/tutorial-list/tutorial-list.component.html
@@ -1,14 +1,37 @@
 <div class="list row">
+  <!-- Search:S-->
   <div class="col-md-8">
     <div class="input-group mb-3">
-      <input type="text" class="form-control" placeholder="Please enter search keyword" [(ngModel)]="keyword"/>
+      <input type="text" class="form-control" placeholder="Please enter keyword" [(ngModel)]="keyword"/>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary" type="button" (click)="retrieveTutorialList()">Search</button>
       </div>
     </div>
   </div>
+  <!-- Search:E -->
+
+  <!-- Page Size:S -->
   <div class="col-md-8">
-    <h4>Tutorial List</h4>
+    <div class="px-1 py-1 mb-1">
+      <div class="container d-flex flex-wrap justify-content-start">
+        <h4>Tutorial List</h4>
+        <div class="text-end">
+          <div class="btn text-dark me-2">
+            Items Per Page:
+          </div>
+          <select (change)="changePageSize($event)">
+            <option *ngFor="let pageSize of pageSizeList">
+              {{pageSize.value}}
+            </option>
+          </select>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Page Size:E -->
+
+  <!-- List:S -->
+  <div class="col-md-8">
     <ul class="list-group">
       <li class="list-group-item"
           *ngFor="let tutorial of tutorialList | paginate: page; let i = index;"
@@ -17,26 +40,22 @@
       </li>
     </ul>
   </div>
+  <!-- List:E -->
 
   <!-- Pagination:S -->
   <div class="col-md-8">
-    <pagination-controls
-      [directionLinks]="true"
-      [responsive]="true"
-      [previousLabel]="'Prev'"
-      [nextLabel]="'Next'"
-      [maxSize]="10"
-      (pageChange)="changePage($event)">
-    </pagination-controls>
-  </div>
-  <div class="mt-3">
-    Items per Page:
-    <select (change)="changePageSize($event)">
-      <option *ngFor="let pageSize of pageSizeList">
-        {{pageSize.value}}
-      </option>
-    </select>
+    <div class="px-1 py-3 mb-1">
+      <div class="container d-flex flex-wrap justify-content-center">
+        <pagination-controls
+          [directionLinks]="true"
+          [responsive]="true"
+          [previousLabel]="'Prev'"
+          [nextLabel]="'Next'"
+          [maxSize]="10"
+          (pageChange)="changePage($event)">
+        </pagination-controls>
+      </div>
+    </div>
   </div>
   <!-- Pagination:E -->
-
 </div>
