--- a/angular-frontend/src/app/tutorial/tutorial-list/tutorial-list.component.html
+++ b/angular-frontend/src/app/tutorial/tutorial-list/tutorial-list.component.html
@@ -15,15 +15,17 @@
     <div class="px-1 py-1 mb-1">
       <div class="container d-flex flex-wrap justify-content-start">
         <h4>Tutorial List</h4>
-        <div class="text-end">
-          <div class="btn text-dark me-2">
-            Items Per Page:
+        <div class="btn text-dark me-2">
+          Items Per Page:
+        </div>
+        <div class="d-flex bd-highlight mb-2">
+          <div class="bd-highlight">
+            <select class="custom-select" (change)="changePageSize($event)" >
+              <option *ngFor="let pageSize of pageSizeList">
+                {{pageSize.value}}
+              </option>
+            </select>
           </div>
-          <select (change)="changePageSize($event)">
-            <option *ngFor="let pageSize of pageSizeList">
-              {{pageSize.value}}
-            </option>
-          </select>
         </div>
       </div>
     </div>
@@ -34,9 +36,9 @@
   <div class="col-md-8">
     <ul class="list-group">
       <li class="list-group-item"
-          *ngFor="let tutorial of tutorialList | paginate: page; let i = index;"
+          *ngFor="let tutorial of tutorialList | paginate: page; let idx = index;"
           routerLink="/tutorial/{{tutorial.id}}">
-        {{tutorial.title}}
+        {{tutorialList.length - idx}}. {{tutorial.title}}
       </li>
     </ul>
   </div>
