#master Modified toast ui editor.

--- a/angular-frontend/src/app/tutorial/tutorial-add/tutorial-add.component.html
+++ b/angular-frontend/src/app/tutorial/tutorial-add/tutorial-add.component.html
@@ -13,7 +13,10 @@
 
       <!--TODO-->
       <div class="form-group">
-        <app-editor></app-editor>
+        <app-editor
+          [initType]="'EDIT'"
+          [content]="''"
+        ></app-editor>
       </div>
       <!--//TODO-->
 
