--- a/angular-frontend/src/app/tutorial/tutorial-add/tutorial-add.component.html
+++ b/angular-frontend/src/app/tutorial/tutorial-add/tutorial-add.component.html
@@ -6,20 +6,19 @@
         <label for="title">Title</label>
         <input type="text" name="title" class="form-control" id="title" required [(ngModel)]="tutorial.title"/>
       </div>
-      <div class="form-group">
-        <label for="description">Description</label>
-        <input name="description" class="form-control" id="description" required [(ngModel)]="tutorial.description"/>
-      </div>
-
       <!--TODO-->
+      <!--<div class="form-group">-->
+        <!--<label for="description">Description</label>-->
+        <!--<input name="description" class="form-control" id="description" required [(ngModel)]="tutorial.description"/>-->
+      <!--</div>-->
+      <!--//TODO-->
       <div class="form-group">
         <app-editor
+          #editor
           [initType]="'EDIT'"
           [content]="''"
         ></app-editor>
       </div>
-      <!--//TODO-->
-
       <button class="btn btn-success" (click)="createTutorial()">Submit</button>
     </div>
     <!--TODO-->
