--- a/angular-frontend/src/app/tutorial/tutorial-detail/tutorial-detail.component.html
+++ b/angular-frontend/src/app/tutorial/tutorial-detail/tutorial-detail.component.html
@@ -6,20 +6,19 @@
         <label for="title">Title</label>
         <input type="text" name="title" class="form-control" id="title" [(ngModel)]="tutorial.title"/>
       </div>
-      <div class="form-group">
-        <label for="description">Description</label>
-        <input type="text" name="description" class="form-control" id="description" [(ngModel)]="tutorial.description"/>
-      </div>
-
       <!--TODO-->
+      <!--<div class="form-group">-->
+        <!--<label for="description">Description</label>-->
+        <!--<input type="text" name="description" class="form-control" id="description" [(ngModel)]="tutorial.description"/>-->
+      <!--</div>-->
+      <!--//TODO-->
       <div class="form-group">
         <app-editor
-          [initType]="'VIEW'"
+          #viewer
+          [initType]="editorInitType"
           [content]="tutorial.description"
         ></app-editor>
       </div>
-      <!--//TODO-->
-
       <div class="form-group">
         <label>Status</label>
         <p><strong>{{tutorial.published ? 'Published' : 'Pending'}}</strong></p>
@@ -42,7 +41,10 @@
     <!--//TODO-->
     <button class="btn btn-primary mr-2" *ngIf="tutorial.published" (click)="updatePublished(false)">UnPublish</button>
     <button class="btn btn-primary mr-2" *ngIf="!tutorial.published" (click)="updatePublished(true)">Publish</button>
-    <button class="btn btn-success mr-2" (click)="updateTutorial()">Update</button>
+    <!--TODO-->
+    <!--<button class="btn btn-success mr-2" (click)="updateTutorial()">Update</button>-->
+    <!--//TODO-->
+    <button class="btn btn-success mr-2" (click)="setEditorInitType()">Update</button>
     <button class="btn btn-danger mr-2" (click)="deleteTutorial()">Delete</button>
   </div>
   <!--TODO-->
