--- a/angular-frontend/src/app/tutorial/tutorial-detail/tutorial-detail.component.html
+++ b/angular-frontend/src/app/tutorial/tutorial-detail/tutorial-detail.component.html
@@ -6,12 +6,6 @@
         <label for="title">Title</label>
         <input type="text" name="title" class="form-control" id="title" [(ngModel)]="tutorial.title"/>
       </div>
-      <!--TODO-->
-      <!--<div class="form-group">-->
-        <!--<label for="description">Description</label>-->
-        <!--<input type="text" name="description" class="form-control" id="description" [(ngModel)]="tutorial.description"/>-->
-      <!--</div>-->
-      <!--//TODO-->
       <div class="form-group">
         <app-editor
           #viewer
@@ -39,12 +33,14 @@
     <!--<button class="badge badge-success mb-2" (click)="updateTutorial()">Update</button>-->
     <!--<button class="badge badge-danger mr-2" (click)="deleteTutorial()">Delete</button>-->
     <!--//TODO-->
+    <!--TODO-->
+    <!-- 추후 공개/비공개 토글로 변경 -->
     <button class="btn btn-primary mr-2" *ngIf="tutorial.published" (click)="updatePublished(false)">UnPublish</button>
     <button class="btn btn-primary mr-2" *ngIf="!tutorial.published" (click)="updatePublished(true)">Publish</button>
-    <!--TODO-->
-    <!--<button class="btn btn-success mr-2" (click)="updateTutorial()">Update</button>-->
     <!--//TODO-->
-    <button class="btn btn-success mr-2" (click)="setEditorInitType()">Update</button>
+    <button class="btn btn-success mr-2" *ngIf="editorInitType === 'VIEW'" (click)="setEditorInitType()">Update</button>
+    <button class="btn btn-success mr-2" *ngIf="editorInitType === 'EDIT'" (click)="updateTutorial()">Submit</button>
+    <button class="btn btn-success mr-2" *ngIf="editorInitType === 'EDIT'" (click)="setEditorInitType()">Cancel</button>
     <button class="btn btn-danger mr-2" (click)="deleteTutorial()">Delete</button>
   </div>
   <!--TODO-->
