--- a/angular-frontend/src/app/board/list/board-list.component.html
+++ b/angular-frontend/src/app/board/list/board-list.component.html
@@ -4,7 +4,7 @@
     <div class="input-group mb-3">
       <input type="text" class="form-control" placeholder="Please enter keyword" [(ngModel)]="keyword"/>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button" (click)="retrieveTutorialList()">Search</button>
+        <button class="btn btn-outline-secondary" type="button" (click)="retrieveBoardList()">Search</button>
       </div>
     </div>
   </div>
@@ -14,7 +14,7 @@
   <div class="col-md-8">
     <div class="px-1 py-1 mb-1">
       <div class="container d-flex flex-wrap justify-content-start">
-        <h4>Tutorial List</h4>
+        <h4>Board List</h4>
         <div class="btn text-dark me-2">
           Items Per Page:
         </div>
@@ -36,9 +36,9 @@
   <div class="col-md-8">
     <ul class="list-group">
       <li class="list-group-item"
-          *ngFor="let tutorial of tutorialList | paginate: page; let idx = index;"
-          routerLink="/tutorial/{{tutorial.id}}">
-        {{page.totalItems - ((page.currentPage-1) * page.itemsPerPage) - idx}}. {{tutorial.title}}
+          *ngFor="let board of boardList | paginate: page; let idx = index;"
+          routerLink="/board/{{board.id}}">
+        {{page.totalItems - ((page.currentPage-1) * page.itemsPerPage) - idx}}. {{board.title}}
       </li>
     </ul>
   </div>
